--- a/mgr_linux/mgr_client/a.ipynb
+++ b/mgr_linux/mgr_client/a.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.4-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,14 +18,14 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python37464bitbaseconda4b4b4fbe609b4cdd838a8c632a242935",
-   "display_name": "Python 3.7.4 64-bit ('base': conda)"
+   "name": "python_defaultSpec_1599692727928",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   }
  },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,43 @@
     "z = (np.mean(ar[:,0]), np.mean(ar[:,1]), np.mean(ar[:,2]))\n",
     "te2 = time.monotonic()\n",
     "print(te2-ts2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(array([0, 0, 2, 0, 2, 1, 2, 1, 1, 2, 0, 1], dtype=int64),\n array([0, 1, 1, 2, 0, 3, 2, 2, 1, 3, 3, 0], dtype=int64))"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "a = np.random.random(size=(3,4)) * 100\n",
+    "np.unravel_index(np.argsort(a, axis=None), shape=(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 5.06752616,  8.12286646, 12.28115727, 53.68470546],\n       [61.5426377 , 39.77893808, 38.67174059, 19.79147191],\n       [16.34276311, 11.51452855, 31.34014915, 44.62405   ]])"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
