--- a/mgr_linux/mgr_client/a.ipynb
+++ b/mgr_linux/mgr_client/a.ipynb
@@ -18,21 +18,27 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1599692727928",
+   "name": "python_defaultSpec_1599923307837",
    "display_name": "Python 3.8.5 64-bit ('base': conda)"
   }
  },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from multiprocessing import Pool\n",
     "import time\n",
-    "# import math"
+    "import requests\n",
+    "# import math\n",
+    "import urllib3\n",
+    "\n",
+    "import constants as c\n",
+    "\n",
+    "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)"
    ]
   },
   {
@@ -132,10 +138,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'ts2' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-531f753f448f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mts2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'ts2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ts2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def o1():\n",
+    "    "
+   ]
   }
  ]
 }
