--- a/mgr_linux/mgr_client/a.ipynb
+++ b/mgr_linux/mgr_client/a.ipynb
@@ -18,7 +18,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1599923307837",
+   "name": "python_defaultSpec_1600026146252",
    "display_name": "Python 3.8.5 64-bit ('base': conda)"
   }
  },
@@ -159,13 +159,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(1, 2)\n(2, 3)\n"
+    }
+   ],
+   "source": [
+    "i = 3\n",
+    "for z in range(1, i):\n",
+    "    print((z, z+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def o1():\n",
-    "    "
-   ]
+   "source": []
   }
  ]
 }
