cleanup, more PI usage, sample toml

--- a/mgr_linux/tools/prepare_data_files.ipynb
+++ b/mgr_linux/tools/prepare_data_files.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.5 64-bit ('ProgramData': virtualenv)",
-   "display_name": "Python 3.8.5 64-bit ('ProgramData': virtualenv)",
+   "name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "import toml\n",
     "from os.path import join\n",
     "import glob\n",
-    "import create_problem_input as cpi\n",
+    "# import problem_input as cpi\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -46,18 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "jobs_max_size = 64\n",
     "machines_max_size = 64\n",
-    "dir_path = r'../data/auto/'"
+    "dir_path = r'../data/auto/'\n",
+    "base_url = r'https://localhost:5001/Operations'\n",
+    "base_url = r'https://localhost:44320/Operations'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -99,21 +101,33 @@
     "            {\n",
     "                'index_cols': [],\n",
     "                'grouping_cols': [],\n",
-    "                'conflicting_machines': conflicting_machines[machines_cnt]\n",
+    "                'conflicting_machines': conflicting_machines[machines_cnt],\n",
+    "                'base_url': base_url\n",
     "            },\n",
     "            'algorithm_config':\n",
     "            {\n",
-    "                'beam_witdh': 5\n",
+    "                'algorithm_name': 'insertion_beam',\n",
+    "                'objective': 'cmax',\n",
+    "                'beam_width': 5\n",
     "            },\n",
+    "            'display_config':\n",
+    "            {\n",
+    "                'print_responses': True,\n",
+    "                'print_method_times': True,\n",
+    "                'show_conflict_graph': True,\n",
+    "                'show_result_schedule_graph': True,\n",
+    "                'show_gantt_plot': True\n",
+    "            }\n",
     "        }\n",
     "\n",
     "        with open(join(dir_path, f'{file_name}.toml'), 'w') as f:\n",
-    "            f.write(toml.dumps(toml_dict).replace(']', ' ]'))"
+    "            # f.write(toml.dumps(toml_dict))\n",
+    "            f.write(toml.dumps(toml_dict).replace(',]', ' ]'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +136,7 @@
       "text/plain": "['../data/auto\\\\16j16m0.toml',\n '../data/auto\\\\16j2m0.toml',\n '../data/auto\\\\16j32m0.toml',\n '../data/auto\\\\16j4m0.toml',\n '../data/auto\\\\16j64m0.toml',\n '../data/auto\\\\16j8m0.toml',\n '../data/auto\\\\2j16m0.toml',\n '../data/auto\\\\2j2m0.toml',\n '../data/auto\\\\2j32m0.toml',\n '../data/auto\\\\2j4m0.toml',\n '../data/auto\\\\2j64m0.toml',\n '../data/auto\\\\2j8m0.toml',\n '../data/auto\\\\32j16m0.toml',\n '../data/auto\\\\32j2m0.toml',\n '../data/auto\\\\32j32m0.toml',\n '../data/auto\\\\32j4m0.toml',\n '../data/auto\\\\32j64m0.toml',\n '../data/auto\\\\32j8m0.toml',\n '../data/auto\\\\4j16m0.toml',\n '../data/auto\\\\4j2m0.toml',\n '../data/auto\\\\4j32m0.toml',\n '../data/auto\\\\4j4m0.toml',\n '../data/auto\\\\4j64m0.toml',\n '../data/auto\\\\4j8m0.toml',\n '../data/auto\\\\64j16m0.toml',\n '../data/auto\\\\64j2m0.toml',\n '../data/auto\\\\64j32m0.toml',\n '../data/auto\\\\64j4m0.toml',\n '../data/auto\\\\64j64m0.toml',\n '../data/auto\\\\64j8m0.toml',\n '../data/auto\\\\8j16m0.toml',\n '../data/auto\\\\8j2m0.toml',\n '../data/auto\\\\8j32m0.toml',\n '../data/auto\\\\8j4m0.toml',\n '../data/auto\\\\8j64m0.toml',\n '../data/auto\\\\8j8m0.toml']"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 7
     }
    ],
    "source": [
